Got checker framework to properly work