@@ -10,9 +10,9 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <checkerframework.version>3.40.0</checkerframework.version>
-    <junit.version>5.10.1</junit.version>
-    <log4j.version>2.22.0</log4j.version>
+    <checkerframework.version>3.42.0</checkerframework.version>
+    <junit.version>5.10.2</junit.version>
+    <log4j.version>2.23.0</log4j.version>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
   </properties>
@@ -143,10 +143,23 @@
             <configuration>
               <fork>true</fork>
               <release>11</release>
-              <compilerArguments>
-                <Xmaxerrs>1000</Xmaxerrs>
-                <Xmaxwarns>1000</Xmaxwarns>
-              </compilerArguments>
+              <compilerArgs>
+                <arg>-Xmaxerrs</arg>
+                <arg>10000</arg>
+                <arg>-Xmaxwarns</arg>
+                <arg>10000</arg>
+                <!-- we have to open up the jdk modules for checker framework to work. note if we get a modules.java this has to change-->
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+                <arg>-Astubs=src/main/checkerframework</arg>
+              </compilerArgs>
               <annotationProcessorPaths>
                 <path>
                   <groupId>org.checkerframework</groupId>
@@ -172,13 +185,6 @@
           <version>${checkerframework.version}</version>
           <scope>provided</scope>
         </dependency>
-        <!--<dependency>
-          <groupId>org.checkerframework</groupId>
-          <artifactId>jdk8</artifactId>
-          <version>3.3.0</version>
-          <scope>provided</scope>
-        </dependency>
-        -->
       </dependencies>
 
     </profile>
